# ProjektZaliczeniowy

./: CMakeLists.txt
include/food/: Food.h  Pizza.h  WithDough.h  WithTopping.h
src/: Application.cpp
src/food/: Pizza.cpp  WithDough.cpp  WithTopping.cpp
